Alterações diversas na documentação.